# Hack-Hour-Clock-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Hack-Hour-Clock-Firmware.c  HackHour.c  project.cmake  utils.h
.devcontainer/: devcontainer.json
cli/: node_lib.c
driver_lib/: CMakeLists.txt  device_drivers.c  device_drivers.h  pico_8seg_led.c
hardware/rp2040/: CMakeLists.txt  hardware_config.c  hardware_config.h
services/: CMakeLists.txt  segment_service.c  services.h  wifi_service.c
